plugins {
    id 'java'
    id 'java-library'
    id 'org.springframework.boot' version '3.4.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.sonarqube" version "6.0.0.5145"
    id 'com.diffplug.spotless' version '6.21.0'
    id 'org.flywaydb.flyway' version "${flywayVersion}"
    id 'jacoco'
}

allprojects {
    group = 'com.huddey.core'
    version = '0.0.2-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    if (configurations.findByName("annotationProcessor") != null) {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    if (configurations.findByName("developmentOnly") == null) {
        developmentOnly
    }
}

dependencies {
    // Spring Boot Dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
    implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.3.0'


    // AWS Dependencies
    implementation platform('software.amazon.awssdk:bom:2.20.47')
    implementation "software.amazon.awssdk:ses:${awsSdkVersion}"
    implementation "software.amazon.awssdk:core:${awsSdkVersion}"
    implementation 'software.amazon.awssdk:sns'

    // Micrometer Dependencies
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonDatatypeVersion}"

    // JWT Dependencies
    implementation "me.paulschwarz:spring-dotenv:${dotenvVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
    
    // Stripe Dependencies
    implementation 'com.stripe:stripe-java:29.3.0'
    implementation "org.flywaydb:flyway-core:${flywayVersion}"
    runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
    implementation 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
    testImplementation "org.testcontainers:junit-jupiter:${testContainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testContainersVersion}"
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat('1.25.0')
        removeUnusedImports()
        importOrder('java', 'javax', 'org', 'com')
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named("build") {
    dependsOn("spotlessCheck")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.matching { it.name == 'prepareKotlinBuildScriptModel' }.configureEach {
    enabled = false
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    dependsOn test
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }
}


sonar {
    properties {
        property "sonar.projectKey", "global-jcraft_userman"
        property "sonar.organization", "global-jcraft"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}